Mount header and configure Webpack file-loader

--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="dist/main.css">
-</head>
-<body>
-    <p>Hello world</p>
 
-    <script src="dist/main.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <title>Landing Page</title>
+        <link rel="stylesheet" href="dist/main.css">
+    </head>
+
+    <body>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div id="header-title">
+                        <h1>Trabalhe na Elo7</h1>
+                    </div>
+
+                    <div id="header-info">
+                        <h4>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis velit vel nulla vehicula lobortis. Morbi ullamcorper posuere quam, maximus commodo felis rhoncus et.
+                        </h4>
+                    </div>
+
+                    <div id="header-link">
+                        <a href="#" class="link">Vagas em aberto</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script src="dist/main.js"></script>
+    </body>
+
 </html>
