--- a/index.html
+++ b/index.html
@@ -6,29 +6,92 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Landing Page</title>
         <link rel="stylesheet" href="dist/main.css">
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-16.png' sizes='16x16'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-32.png' sizes='32x32'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-48.png' sizes='48x48'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-64.png' sizes='64x64'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-96.png' sizes='96x96'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-128.png' sizes='128x128'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-160.png' sizes='160x160'>
+        <link rel='icon' href='https://images.elo7.com.br/assets/new/favicon-192.png' sizes='192x192'>
     </head>
 
     <body>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div id="header-title">
-                        <h1>Trabalhe na Elo7</h1>
-                    </div>
+        <section id="header">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div id="header-title">
+                            <h1>Trabalhe na Elo7</h1>
+                        </div>
 
-                    <div id="header-info">
-                        <h4>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis velit vel nulla vehicula lobortis. Morbi ullamcorper posuere quam, maximus commodo felis rhoncus et.
-                        </h4>
-                    </div>
+                        <div id="header-info">
+                            <h4>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis velit vel nulla vehicula lobortis. Morbi ullamcorper posuere quam, maximus commodo felis rhoncus et.
+                            </h4>
+                        </div>
 
-                    <div id="header-link">
-                        <a href="#" class="link">Vagas em aberto</a>
+                        <div id="header-link">
+                            <a href="#" class="link">Vagas em aberto</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section id="ceo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6" id="ceo-video">
+                        <div class="col-12">
+                            <img class="img-responsive" src="./src/assets/img/placeholder-video.png" alt="CEO Carlos Curione">
+                        </div>
+                    </div>
+
+                    <div class="col-6" id="ceo-article">
+                        <div class="col-12">
+                            <h3 class="title">
+                                Palavra do CEO<br>
+                                <span>Carlos Curione</span>
+                            </h3>
+                            <p class="article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis neque ut dui luctus fringilla. Phasellus neque lorem, facilisis aliquam lectus ut, mollis mattis leo. Curabitur maximus metus tortor, nec faucibus ipsum malesuada sed. Praesent at mauris sem. In rhoncus vehicula faucibus. Sed lacinia blandit magna sed condimentum. Vivamus sit amet dolor vel lorem condimentum auctor et id orci. Etiam facilisis lacus sed sollicitudin pulvinar</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="team">
+
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Conheça nosso time fora de série</h3>
+                    </div>
+
+                    <div class="col-3">
+                        <img src="./src/assets/img/camila.png">
+                    </div>
+
+                    <div class="col-3">
+                        <img src="./src/assets/img/camila.png">
+                    </div>
+
+                    <div class="col-3">
+                        <img src="./src/assets/img/camila.png">
+                    </div>
+
+                    <div class="col-3">
+                        <img src="./src/assets/img/camila.png">
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
 
         <script src="dist/main.js"></script>
     </body>
