--- a/index.html
+++ b/index.html
@@ -68,23 +68,27 @@
 
                 <div class="row">
                     <div class="col-12">
-                        <h3>Conheça nosso time fora de série</h3>
+                        <h3 class="title">Conheça nosso time<br>fora de série</h3>
                     </div>
 
-                    <div class="col-3">
-                        <img src="./src/assets/img/camila.png">
-                    </div>
+                    <div class="col-12 team-items">
+                        <div class="row">
+                            <div class="col-3">
+                                <img class="img-responsive" src="./src/assets/img/camila.png" alt="Camila">
+                            </div>
 
-                    <div class="col-3">
-                        <img src="./src/assets/img/camila.png">
-                    </div>
+                            <div class="col-3">
+                                <img class="img-responsive" src="./src/assets/img/guto.png" alt="Guto">
+                            </div>
 
-                    <div class="col-3">
-                        <img src="./src/assets/img/camila.png">
-                    </div>
+                            <div class="col-3">
+                                <img class="img-responsive" src="./src/assets/img/david.png" alt="David">
+                            </div>
 
-                    <div class="col-3">
-                        <img src="./src/assets/img/camila.png">
+                            <div class="col-3">
+                                <img class="img-responsive" src="./src/assets/img/beatriz.png" alt="Beatriz">
+                            </div>
+                        </div>
                     </div>
                 </div>
 
