--- a/index.html
+++ b/index.html
@@ -96,6 +96,40 @@
 
         </section>
 
+        <section id="benefits">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-4 item life-quality">
+                        <h4 class="title">Qualidade de vida</h4>
+                        <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque libero ligula, consectetur quis vulputate et, venenatis ac turpis. Sed sed magna fermentum, dapibus sem quis, dignissim elit.</p>
+                    </div>
+
+                    <div class="col-4 item environment">
+                        <h4 class="title">Ambiente descontraído</h4>
+                        <p class="content">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed placerat mauris ac ultrices faucibus. Integer rhoncus blandit nunc vitae venenatis. Proin odio ante, fringilla eu quam vitae, tincidunt facilisis nunc. Praesent in pharetra diam, sed dignissim dui. Duis tristique lacus in ipsum blandit, non lacinia odio eleifend. Nulla eu finibus nulla. Aenean hendrerit diam elit, id lacinia quam fermentum ut.</p>
+                    </div>
+
+                    <div class="col-4 item activities">
+                        <h4 class="title">Atividades extras</h4>
+                        <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque libero ligula, consectetur quis vulputate et, venenatis ac turpis. Sed sed magna fermentum, dapibus sem quis, dignissim elit. Duis consectetur ipsum massa. Suspendisse magna ipsum, pellentesque a neque ac, cursus posuere diam</p>
+                    </div>
+
+                    <div class="col-12">
+                        <div id="benefits-link">
+                            <a href="#" class="link">Saiba mais</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+        </section>
+
 
         <script src="dist/main.js"></script>
     </body>
