--- a/index.html
+++ b/index.html
@@ -127,9 +127,31 @@
 
             </div>
 
-
         </section>
 
+        <section id="party">
+            <div class="container"></div>
+        </section>
+
+        <section id="jobs">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="title">Vagas em aberto</h3>
+                    </div>
+
+                    <div class="col-12">
+                        <h4>Desenvolvimento</h4>
+
+                        <ul>
+                            <li>Desenvolvedor Mobile Senior</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
         <script src="dist/main.js"></script>
     </body>
