--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
 
                         <div id="header-link">
-                            <a href="#" class="link">Vagas em aberto</a>
+                            <a href="#jobs" class="link">Vagas em aberto</a>
                         </div>
                     </div>
                 </div>
@@ -141,11 +141,16 @@
                         <h3 class="title">Vagas em aberto</h3>
                     </div>
 
-                    <div class="col-12">
-                        <h4>Desenvolvimento</h4>
+                    <div id="job-list" class="col-12">
+                        <h4 class="title subtitle">Desenvolvimento</h4>
 
-                        <ul>
-                            <li>Desenvolvedor Mobile Senior</li>
+                        <ul id="list">
+                            <li>
+                                <p class="job-title">
+                                    <a href="#">Desenvolvedor Mobile Senior</a>
+                                </p>
+                                <p class="job-locale">Vila Olímpia - São Paulo, Brasil</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
