--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 
         <section id="jobs">
 
+            <div id="vue-job"></div>
+
             <div class="container">
                 <div class="row">
                     <div class="col-12">
