--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div id="header-title">
-                            <h1>Trabalhe na Elo7</h1>
+                            <h1>Trabalhe no Elo7</h1>
                         </div>
 
                         <div id="header-info">
@@ -43,13 +43,13 @@
         <section id="ceo">
             <div class="container">
                 <div class="row">
-                    <div class="col-6" id="ceo-video">
+                    <div class="col-sm-12 col-lg-6" id="ceo-video">
                         <div class="col-12">
                             <img class="img-responsive" src="./src/assets/img/placeholder-video.png" alt="CEO Carlos Curione">
                         </div>
                     </div>
 
-                    <div class="col-6" id="ceo-article">
+                    <div class="col-sm-12 col-lg-6" id="ceo-article">
                         <div class="col-12">
                             <h3 class="title">
                                 Palavra do CEO<br>
@@ -73,19 +73,19 @@
 
                     <div class="col-12 team-items">
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-lg-3 col-sm-6 col-sm-6">
                                 <img class="img-responsive" src="./src/assets/img/camila.png" alt="Camila">
                             </div>
 
-                            <div class="col-3">
+                            <div class="col-lg-3 col-sm-6 col-sm-6">
                                 <img class="img-responsive" src="./src/assets/img/guto.png" alt="Guto">
                             </div>
 
-                            <div class="col-3">
+                            <div class="col-lg-3 col-sm-6 col-sm-6">
                                 <img class="img-responsive" src="./src/assets/img/david.png" alt="David">
                             </div>
 
-                            <div class="col-3">
+                            <div class="col-lg-3 col-sm-6 col-sm-6">
                                 <img class="img-responsive" src="./src/assets/img/beatriz.png" alt="Beatriz">
                             </div>
                         </div>
@@ -102,17 +102,17 @@
 
                 <div class="row">
 
-                    <div class="col-4 item life-quality">
+                    <div class="col-12 col-lg-4 item life-quality">
                         <h4 class="title">Qualidade de vida</h4>
                         <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque libero ligula, consectetur quis vulputate et, venenatis ac turpis. Sed sed magna fermentum, dapibus sem quis, dignissim elit.</p>
                     </div>
 
-                    <div class="col-4 item environment">
+                    <div class="col-12 col-lg-4 item environment">
                         <h4 class="title">Ambiente descontraído</h4>
                         <p class="content">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed placerat mauris ac ultrices faucibus. Integer rhoncus blandit nunc vitae venenatis. Proin odio ante, fringilla eu quam vitae, tincidunt facilisis nunc. Praesent in pharetra diam, sed dignissim dui. Duis tristique lacus in ipsum blandit, non lacinia odio eleifend. Nulla eu finibus nulla. Aenean hendrerit diam elit, id lacinia quam fermentum ut.</p>
                     </div>
 
-                    <div class="col-4 item activities">
+                    <div class="col-12 col-lg-4 item activities">
                         <h4 class="title">Atividades extras</h4>
                         <p class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque libero ligula, consectetur quis vulputate et, venenatis ac turpis. Sed sed magna fermentum, dapibus sem quis, dignissim elit. Duis consectetur ipsum massa. Suspendisse magna ipsum, pellentesque a neque ac, cursus posuere diam</p>
                     </div>
