--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 
                     <div id="job-list" class="col-12">
                         <h4 class="title subtitle">Desenvolvimento</h4>
-                        <div id="vue-job"></div>
+                        <div id="vue-job">
+                            <ul id="list"></ul>
+                        </div>
                     </div>
                 </div>
             </div>
